--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,6 @@
 body {
   background-color: #efefef;
+  width: 100%;
   margin: 0;
   font-family: 'Inter', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -210,15 +211,15 @@ nav {
 
 /* SLIDESHOW */
 
-#slideshow * {
+#banner * {
 	box-sizing:border-box;
-  max-width: 100%;
+  width: 100%;
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  margin-top: auto;
+  margin-top: 0;
 }
-.slideshow-container {
+.banner-container {
   /* min-width: 300px; */
   z-index: -1;
 
@@ -227,9 +228,6 @@ nav {
 	width: 100%;
   height: 250px;
   object-fit: cover;
-
-}
-.fade {
 
 }
 .prev, .next {
@@ -280,15 +278,19 @@ nav {
 
 /* PRODUCTS */
 .products {
-  width: 1400px;
+  width: 1700px;
   box-sizing: border-box;
   /* background: #1b1b1d; */
   margin-left: auto;
   margin-right: auto;
-  margin-top: 30px;
+  margin-top: 40px;
 }
 .productstitle{
-  font-weight: 600;
+  font-weight: 700;
+  font-size: 18pt;;
+}
+.maintable{
+  margin-top: 25px;
 }
 .maintable a{
   text-decoration: none;
@@ -305,13 +307,12 @@ nav {
 
 td {
   width: 300px;
-  height: 350px;
+  height: 370px;
   /* border-bottom: 5px solid #aaaaaa; */
   transition: 0.5s;
   margin-left: 15px;
   box-shadow: 0 5px 35px 5px rgb(0 0 0 / 0.05);
   border-radius: 15px;
-
 }
 td:hover {
   /* cursor: pointer; */
@@ -324,7 +325,7 @@ td:hover {
 
 .deal-caption {
   text-align: left;
-  font-size: 13pt;
+  font-size: 12pt;
   font-weight: 400;
   padding-left: 20px;
   padding-top: 10px;
@@ -340,8 +341,9 @@ td:hover {
   font-weight: 700;
   float: left;
   padding-left: 20px;
-  margin-top: 0px;
+  margin-top: 18px;
   transition: color 0.5s;
+  color: #6949FF;
 }
 table {
   text-align: center;
@@ -356,7 +358,7 @@ tr {
 .author {
   /* display: inline-block; */
   text-align: left;
-  margin-top: 30px;
+  margin-top: 50px;
   padding-bottom: 10px;
   padding-left: 20px;
   position: absolute;
@@ -381,4 +383,23 @@ tr {
 .tr-link {
   text-decoration: none;
   color: #6949FF;
+}
+.browseall {
+  color: #8C95A4;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 11pt;
+  margin-left: 25px;
+  transition: .2s;
+}
+.browseall:hover {
+  color: #6949FF;
+}
+.featuredtext {
+  float: left;
+  margin-left: 0;
+  left: 0;
+  text-align: left;
+  width: 100%;
+  margin-top: 35px;
 }
