--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -97,7 +97,7 @@ nav {
 /* SEARCH END */
 
 .navleft {
-  width: 50%;
+  width: 40%;
   /* background: #cc1818; */
   padding-top: 20px;
   padding-left: 30px;
@@ -110,7 +110,7 @@ nav {
 
 .navbtns {
   float: right;
-  margin-right: 35px;
+  margin-right: 50px;
   margin-left: 0;
   margin-top: 0;
   padding: 0;
@@ -180,20 +180,33 @@ nav {
 
 .sec1 {
   width: 100%;
-  height: 80px;
-  /* background-color: #e9e9e9; */
-  background: url('../images/abstract-bg-white1.svg');
+  height: 40px;
+  background-color: #6949FF;
+  /* background: url('../images/abstract-bg-white1.svg'); */
   padding-left: 0px;
-  padding-top: 30px;
+  padding-top: 20px;
   text-align: center;
-  background-size:     cover;
+  background-size: cover;
 }
+.catlinks{
+  text-decoration: none;
+  padding: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
+  font-size: 12pt;
+  color: #ffffff;
+  font-weight: 600;
+  transition: 0.2s ease-out;
 
+}
+.catlinks:hover {
+  color: #c5b8ff;
+}
 .bigbutton {
   height: 50px;
   width: 180px;
   background-color: #fff;
-  box-shadow: 0 5px 35px 5px rgb(0 0 0 / 0.05);
+  box-shadow: 0 5px 35px 5px rgb(0 0 0 / 0.08);
   border-radius: 10px;
   border: none;
   cursor: pointer;
@@ -213,11 +226,12 @@ nav {
 
 #banner * {
 	box-sizing:border-box;
-  width: 100%;
+  width: 1700px;
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 0;
+  margin-top: 20px;
+  border-radius: 15px;
 }
 .banner-container {
   /* min-width: 300px; */
@@ -226,9 +240,9 @@ nav {
 }
 .slide > img {
 	width: 100%;
-  height: 250px;
+  height: 400px;
   object-fit: cover;
-
+  /* background: url('../images/mainbannerapril.jpg'); */
 }
 .prev, .next {
 	cursor:pointer;
