--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,9 +7,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-#root{
+#root {
   height: 100%;
 }
+
 /* NAV START */
 
 nav {
@@ -56,15 +57,19 @@ nav {
   background: #efefef;
   color: #000000;
 }
-.search-box + label .search-icon {
+
+.search-box+label .search-icon {
   color: black;
 }
-.search-box:hover + label .search-icon {
+
+.search-box:hover+label .search-icon {
   color: white;
 }
-.search-box:focus + label {
+
+.search-box:focus+label {
   display: none;
 }
+
 .search-box:not(:focus) {
   text-indent: -5000px;
 }
@@ -90,6 +95,7 @@ nav {
   color: #8C95A4;
   cursor: text;
 }
+
 .search-container label:hover {
   cursor: text;
 }
@@ -103,6 +109,7 @@ nav {
   padding-left: 30px;
   display: inline-block;
 }
+
 .navright {
   width: 50%;
   padding: 30px;
@@ -116,10 +123,12 @@ nav {
   padding: 0;
   display: flex;
 }
+
 .navbtns li {
   margin-left: 80px;
   list-style: none;
 }
+
 .navbtns li a {
   text-decoration: none;
   font-size: 0.8em;
@@ -127,18 +136,22 @@ nav {
   letter-spacing: 1px;
   transition: 0.2s;
 }
+
 .navbtns li a:hover {
   color: #6949FF;
 }
+
 .navbtns li .activelink {
   /* color: #ec008c; */
   transition: 0.2s ease-out;
   border-bottom: 1px solid #6949FF;
 }
+
 .navbtns li .activelink:hover {
   color: #555;
   border-bottom: 1px solid #555;
 }
+
 .cart {
   content: url('../images/cart.svg');
   position: absolute;
@@ -147,6 +160,7 @@ nav {
   margin-left: -60px;
   width: 25px;
 }
+
 .heart {
   content: url('../images/heart.svg');
   position: absolute;
@@ -155,6 +169,7 @@ nav {
   margin-left: -95px;
   width: 25px;
 }
+
 .avatar {
   content: url('../images/avatar.jpg');
   position: absolute;
@@ -163,6 +178,7 @@ nav {
   margin-left: -107px;
   width: 30px;
 }
+
 .logo {
   content: url('../images/llama-icon.svg');
   position: absolute;
@@ -188,7 +204,8 @@ nav {
   text-align: center;
   background-size: cover;
 }
-.catlinks{
+
+.catlinks {
   text-decoration: none;
   padding: 20px;
   margin-top: auto;
@@ -199,9 +216,11 @@ nav {
   transition: 0.2s ease-out;
 
 }
+
 .catlinks:hover {
   color: #c5b8ff;
 }
+
 .bigbutton {
   height: 50px;
   width: 180px;
@@ -225,7 +244,7 @@ nav {
 /* SLIDESHOW */
 
 #banner * {
-	box-sizing:border-box;
+  box-sizing: border-box;
   width: 1700px;
   position: relative;
   margin-left: auto;
@@ -233,61 +252,70 @@ nav {
   margin-top: 20px;
   border-radius: 15px;
 }
+
 .banner-container {
   /* min-width: 300px; */
   z-index: -1;
 
 }
-.slide > img {
-	width: 100%;
+
+.slide>img {
+  width: 100%;
   height: 400px;
   object-fit: cover;
   /* background: url('../images/mainbannerapril.jpg'); */
 }
-.prev, .next {
-	cursor:pointer;
-	color: #ffffff;
-	position:absolute;
-	top:50%;
-	width:auto;
-	margin-top:-1.8em;
-	padding:16px;
-	border-radius: 0 3px 3px 0;
-	transition: all 1s;
-}
+
+.prev,
 .next {
-	right:0;
-	border-radius: 3px 0 0 3px;
+  cursor: pointer;
+  color: #ffffff;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -1.8em;
+  padding: 16px;
+  border-radius: 0 3px 3px 0;
+  transition: all 1s;
 }
-.prev:hover, .next:hover {
-	color:#1b1b1d;
-	display:inline-block;
-	background-color:#aaaaaa;
-	opacity:0.5;
-	transition: ease 0.5s;
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+  color: #1b1b1d;
+  display: inline-block;
+  background-color: #aaaaaa;
+  opacity: 0.5;
+  transition: ease 0.5s;
 }
 
 .dot {
-	cursor: pointer;
-	height: 10px;
-	width: 10px;
-	margin: 5px 2px;
-	background-color: #aaaaaa;
-	border-radius: 50%;
-	display:inline-block;
-	transition: all 0.5s;
+  cursor: pointer;
+  height: 10px;
+  width: 10px;
+  margin: 5px 2px;
+  background-color: #aaaaaa;
+  border-radius: 50%;
+  display: inline-block;
+  transition: all 0.5s;
 }
+
 .slide.active,
 .dot.active,
 .dot:hover {
-	background-color: #6949FF;
+  background-color: #6949FF;
 }
+
 .dots {
   position: relative;
   /* display: inline-block; */
   margin-top: 10px;
-	text-align:center;
-	/* margin-bottom:1em; */
+  text-align: center;
+  /* margin-bottom:1em; */
 }
 
 /* PRODUCTS */
@@ -299,20 +327,26 @@ nav {
   margin-right: auto;
   margin-top: 40px;
 }
-.productstitle{
+
+.productstitle {
   font-weight: 700;
-  font-size: 18pt;;
+  font-size: 18pt;
+  ;
 }
-.maintable{
+
+.maintable {
   margin-top: 25px;
 }
-.maintable a{
+
+.maintable a {
   text-decoration: none;
 }
+
 .bestdeals {
   text-align: center;
   display: inline-block;
 }
+
 .bestdeals-img {
   width: 250px;
   height: 250px;
@@ -328,6 +362,7 @@ td {
   box-shadow: 0 5px 35px 5px rgb(0 0 0 / 0.05);
   border-radius: 15px;
 }
+
 td:hover {
   /* cursor: pointer; */
   /* border-bottom: 5px solid #6949FF; */
@@ -350,6 +385,7 @@ td:hover {
   /* overflow: hidden; */
   /* border: 2px solid #262626; */
 }
+
 .price {
   font-size: 14pt;
   font-weight: 700;
@@ -359,16 +395,19 @@ td:hover {
   transition: color 0.5s;
   color: #6949FF;
 }
+
 table {
   text-align: center;
   margin: 0 auto;
   margin-bottom: 100px;
 }
+
 tr {
   display: inline-block;
   margin-top: 20px;
   margin-left: 20px;
 }
+
 .author {
   /* display: inline-block; */
   text-align: left;
@@ -381,23 +420,27 @@ tr {
   color: #000000;
 }
 
- .designerspan{
-   color: #000000;
-   font-weight: 600;
+.designerspan {
+  color: #000000;
+  font-weight: 600;
 
- }
- .designer{
+}
+
+.designer {
   font-weight: 400;
   color: #000000;
   transition: .2s;
- }
- .designer:hover{
+}
+
+.designer:hover {
   color: #6949FF;
 }
+
 .tr-link {
   text-decoration: none;
   color: #6949FF;
 }
+
 .browseall {
   color: #8C95A4;
   text-decoration: none;
@@ -406,9 +449,11 @@ tr {
   margin-left: 25px;
   transition: .2s;
 }
+
 .browseall:hover {
   color: #6949FF;
 }
+
 .featuredtext {
   float: left;
   margin-left: 0;
@@ -433,7 +478,7 @@ tr {
 }
 
 .leftside {
-  box-sizing:border-box;
+  box-sizing: border-box;
   width: 400px;
   position: relative;
   margin-left: auto;
@@ -442,22 +487,25 @@ tr {
 }
 
 .rightside {
-  box-sizing:border-box;
+  box-sizing: border-box;
   width: 650px;
   position: relative;
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
 }
+
 .largeimg {
   width: 600px;
   height: 600px;
   border-radius: 25px;
   box-shadow: 0 15px 45px 5px rgb(0 0 0 / 0.05);
 }
+
 .prodtitle {
   font-weight: 900;
 }
+
 .prodcategory {
   font-weight: 600;
   color: #999;
@@ -465,20 +513,22 @@ tr {
 
 .discountedprodprice {
   font-weight: 800;
-  color:#6949FF;
+  color: #6949FF;
   font-size: 26pt;
   margin-top: 50px;
 
 }
+
 .prodprice {
   font-weight: 800;
-  color:#c9c9c9;
+  color: #c9c9c9;
   font-size: 22pt;
   text-decoration: line-through;
   text-decoration-color: #cc1818;
   text-decoration-thickness: 2.5pt;
   margin-left: 10pt;
 }
+
 .discountamount {
   color: #fff;
   font-size: 10pt;
@@ -490,29 +540,35 @@ tr {
   padding-right: 8px;
   border-radius: 4px;
 }
+
 .prodspectitle {
   color: #000000;
   font-weight: 600;
 }
+
 .proddesigner {
-  color:#000000;
+  color: #000000;
   font-weight: 400;
   text-decoration: none;
   transition: all 0.2s;
 }
+
 .proddesigner:hover {
-  color:#6949FF;
+  color: #6949FF;
 }
+
 .sizes-container {
   width: 650px;
   display: flex;
   margin-top: 20px;
 }
+
 .sizes-container2 {
   margin-top: 15px;
   width: 650px;
   display: flex;
 }
+
 .size-tangle {
   background: #fff;
   width: 100px;
@@ -526,6 +582,7 @@ tr {
   transition: all 0.2s;
 
 }
+
 .size-tangle1 {
   background: #fff;
   width: 100px;
@@ -537,30 +594,35 @@ tr {
   font-weight: 600;
   transition: all 0.2s;
 }
-.size-tangle:hover  {
+
+.size-tangle:hover {
   cursor: pointer;
   background: #fff;
   color: #6949FF;
   border: 1px solid #6949FF;
 }
-.size-tangle:focus  {
+
+.size-tangle:focus {
   cursor: pointer;
   background: #6949FF;
   color: #fff;
   border: 1px solid #6949FF;
 }
+
 .size-tangle1:hover {
   cursor: pointer;
   background: #fff;
   color: #6949FF;
   border: 1px solid #6949FF;
 }
+
 .size-tangle1:focus {
   cursor: pointer;
   background: #6949FF;
   color: #fff;
   border: 1px solid #6949FF;
 }
+
 .add-to-cart {
   width: 550px;
   text-transform: uppercase;
@@ -578,10 +640,12 @@ tr {
   letter-spacing: 1pt;
   transition: all 0.2s;
 }
+
 .add-to-cart:hover {
   cursor: pointer;
   background: #4f35c2;
 }
+
 .instock {
   color: #fff;
   font-size: 10pt;
@@ -593,6 +657,7 @@ tr {
   padding-right: 8px;
   border-radius: 4px;
 }
+
 .outofstock {
   color: #fff;
   font-size: 10pt;
@@ -604,6 +669,7 @@ tr {
   padding-right: 8px;
   border-radius: 4px;
 }
+
 .add-to-cart-outofstock {
   width: 550px;
   text-transform: uppercase;
@@ -621,36 +687,165 @@ tr {
   letter-spacing: 1pt;
   transition: all 0.2s;
 }
+
 .checkotherstext {
   font-size: 17pt;
   font-weight: 900;
 }
-.coolstufflink{
+
+.coolstufflink {
   text-decoration: none;
   transition: all 0.2s;
-  color:#6949FF;
+  color: #6949FF;
 }
-.coolstufflink:hover{
+
+.coolstufflink:hover {
   color: #4f35c2;
 }
+
 .stockcount {
   margin-left: 15px;
   font-weight: 800;
-  color:#000
+  color: #000
 }
+
 .availabletext {
   font-weight: 400;
   color: #000;
 }
+
 .alert {
   padding: 5px;
   border: 1px solid transparent;
 }
-.alert-info{
+
+.alert-info {
   color: #fff;
   background-color: #6949FF;
 }
-.alert-danger{
+
+.alert-danger {
   color: #fff;
   background-color: #cc1818;
+}
+
+/* SPINNER */
+
+.spinner {
+  -webkit-animation: rotator 1.4s linear infinite;
+  animation: rotator 1.4s linear infinite;
+  position: fixed;
+  z-index: 999;
+  height: 2em;
+  width: 2em;
+  overflow: visible;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+@-webkit-keyframes rotator {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(270deg);
+  }
+}
+
+@keyframes rotator {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(270deg);
+  }
+}
+
+.path {
+  stroke-dasharray: 187;
+  stroke-dashoffset: 0;
+  transform-origin: center;
+  -webkit-animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+  animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+}
+
+@-webkit-keyframes colors {
+  0% {
+    stroke: #6949FF;
+  }
+
+  25% {
+    stroke: #6949FF;
+  }
+
+  50% {
+    stroke: #6949FF;
+  }
+
+  75% {
+    stroke: #6949FF;
+  }
+
+  100% {
+    stroke: #6949FF;
+  }
+}
+
+@keyframes colors {
+  0% {
+    stroke: #6949FF;
+  }
+
+  25% {
+    stroke: #6949FF;
+  }
+
+  50% {
+    stroke: #6949FF;
+  }
+
+  75% {
+    stroke: #6949FF;
+  }
+
+  100% {
+    stroke: #6949FF;
+  }
+}
+
+@-webkit-keyframes dash {
+  0% {
+    stroke-dashoffset: 187;
+  }
+
+  50% {
+    stroke-dashoffset: 46.75;
+    transform: rotate(135deg);
+  }
+
+  100% {
+    stroke-dashoffset: 187;
+    transform: rotate(450deg);
+  }
+}
+
+@keyframes dash {
+  0% {
+    stroke-dashoffset: 187;
+  }
+
+  50% {
+    stroke-dashoffset: 46.75;
+    transform: rotate(135deg);
+  }
+
+  100% {
+    stroke-dashoffset: 187;
+    transform: rotate(450deg);
+  }
 }
