--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,20 @@ body {
 
 /* NAV START */
 
+.badge {
+  position: absolute;
+  background-color: #6949FF;
+  color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-left: 5px;
+  padding-right: 4px;
+  margin-left: 0.2px;
+  font-size: 9pt;
+}
+
 nav {
   justify-content: center;
   display: flex;
@@ -848,4 +862,48 @@ tr {
     stroke-dashoffset: 187;
     transform: rotate(450deg);
   }
+}
+
+li {
+  list-style: none;
+}
+
+.selqty {
+  font-weight: 600;
+  font-size: 12pt;
+}
+
+input,
+select,
+textarea {
+  background-color: #fff;
+  cursor: pointer;
+  border: 1px solid #C7CBD1;
+  border-radius: 5px;
+  font-size: 10pt;
+  margin-left: 10px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 12px;
+  padding-right: 40px;
+  font-weight: 600;
+}
+
+textarea:focus,
+select:hover {
+  border: 1px solid #6949FF;
+  color: #6949FF;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 12px;
+  padding-right: 40px;
+  transition: all 0.5s;
+}
+
+select:focus {
+  border: 1px solid #6949FF;
+  color: #000;
+
+  transition: all 0.5s;
+
 }
